2005-09-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/delay.h: improve documentation, make sure the
	functions will always be inlined.
	Fix for bugs:
	#12495: about Busy-wait delay loops(document)
	#14224: _delay_ms() not inlining if called more than once in a unit
	#14433: Improve documentation of <avr/delay.h>

2005-09-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: Minor clarifications: make the volatile
	description a bit more detailed, explain that r2 through r15 are
	available for global register assignment, explain .initN sections
	better, mention that GCC no longer puts zero-init'ed .data
	variables into .data.
	* doc/api/sections.dox: move the C example from .init1 to .init3,
	and explain that this ensures __zero_reg__ is properly set up
	already.

2005-09-01 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Markus F.X.J. Oberhumer:
	* include/stdint.h: use GCC attributes for exact integral
	types. Avoid -Wlong-long warnings by adding __extension__. Remove
	obsolete comments.  Closes patch #3782 overview: modernize
	<stdint.h>

2005-09-01 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/ctype.S: Change all branches into RJMPs
	to guarantee their reachability, closes patch #3912.
	Contributed by Stefano Rodrigo.

2005-08-31 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/sections.dox: catch up with .init4 reality (fix for
	bug #14262)
	* include/avr/eeprom.h: use either EEWE or EEPE in
	eeprom_is_ready(); fix for bug #14241

2005-08-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/wdt.h: Document the watchdog remaining active after
	a watchdog reset, and how to turn it off.

2005-08-15 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/tools-install.dox (avr-libc): fix a missing "tar" command.

2005-08-14 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/main_page.dox: Add explanations about the intented
	standard conformance, as well as about the (non-)reentrancy of